--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,271 @@ Green: #00B172
 White: #FFF
 
 */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+/* Barra de navegación */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    background-color: #fff;
+    padding: 10px 20px;
+    z-index: 1000;
+}
+
+.logo {
+    width: 150px;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+}
+
+.nav-links li {
+    margin-left: 20px;
+}
+
+.nav-links a {
+    text-decoration: none;
+    color: #1A1A1A;
+}
+
+
+/* Header styles */
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 40px;
+    position: absolute;
+    width: 100%;
+    top: 0;
+}
+
+/* Main section */
+#main-section {
+    background-image: url('/images/landing.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content {
+    text-align: center;
+    z-index: 1;
+}
+
+.content h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+    color: #fff;
+}
+
+.content h2 {
+    font-size: 20px;
+    line-height: 1.5;
+    color: #fff;
+}
+
+/* Responsive design */
+@media (max-width: 768px) {
+    .content h1 {
+        font-size: 36px;
+    }
+
+    .content p {
+        font-size: 16px;
+    }
+}
+
+
+
+
+
+/* Sección 1 */
+#spotify-info {
+    padding: 60px 40px;
+    background-color: #fff;
+    text-align: center;
+}
+
+#spotify-info h2 {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #000;
+    border-bottom: 3px solid #1DB954;
+    display: inline-block;
+    padding-bottom: 10px;    
+}
+
+.spotify-info-grid {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 40px;
+    gap: 20px;
+    flex-wrap: wrap; 
+}
+
+.spotify-info-item {
+    flex: 1;
+    width: 30%;
+    min-width: 250px;
+    text-align: center; 
+    padding: 20px;   
+}
+
+.spotify-info-item img {
+    width: 60px;
+    height: 60px;
+    margin-bottom: 20px;
+}
+
+.spotify-info-item h3 {
+    font-size: 18px;
+    color: #00B172;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.spotify-info-ite p {
+    font-size: 16px;
+    color: #666;    
+}
+
+@media (max-width: 768px) {
+.spotify-info-grid {
+    flex-direction: column;
+}
+
+.spotify-info-item {
+    width: 100%;
+    margin-bottom: 40px;
+}
+}
+
+
+/* Sección 2 */
+#spotify-kanye {
+    padding: 60px 0px;
+}
+
+#spotify-kanye .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    background-color: #00B172;
+    padding: 60px;
+    background-image: url('/images/spotify-icon-white.png'); 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100px 100px; 
+}
+
+#spotify-kanye .spotify-text {
+    color: #fff;
+    flex: 1;
+    padding-right: 20px;
+    position: relative; 
+}
+
+#spotify-kanye h2 {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    border-bottom: 3px solid #fff;
+    display: inline-block;
+    padding-bottom: 10px;
+}
+
+#spotify-kanye .spotify-features {
+    margin-top: 30px;
+}
+
+#spotify-kanye .feature {
+    flex: 1 1 25%;
+    text-align: left;
+    margin-bottom: 20px;
+    min-width: 200px; 
+    max-width: 300px; 
+}
+
+#spotify-kanye h3 {
+    font-size: 24px;
+    color: #fff;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+#spotify-kanye p {
+    font-size: 16px;
+    color: #fff;
+    line-height: 1.6;
+}
+
+#spotify-kanye .spotify-logo {
+    margin-top: 30px;
+}
+
+#spotify-kanye .spotify-logo img {
+    width: 50px; 
+    height: 50px;
+}
+
+#spotify-kanye .spotify-image {
+    flex: 1;
+    text-align: right;
+}
+
+#spotify-kanye .spotify-image img {
+    max-width: 50%;
+    height: auto;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    #spotify-kanye .container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #spotify-kanye .spotify-text, #spotify-kanye .spotify-image {
+        padding: 0;
+    }
+
+    #spotify-kanye .spotify-image {
+        margin-top: 20px;
+    }
+}
